Mengubah file Datasiswa

--- a/datasiswa.html
+++ b/datasiswa.html
@@ -7,7 +7,11 @@
 	<title>Belajar Git</title>
 </head>
 <body>
+	<h2>Data Siswa</h2>
+	<ul>
 		<li>Agin Puspita :12345</li>
-		<li>Auliya Rizki :09876</li>
+		<li>Auliya Rizki :09846</li>
+	</ul>
+	<p>contoh paragraf</p>
 </body>
 </html>
