Mengubah isid ari file Datasiswa.html

--- a/datasiswa.html
+++ b/datasiswa.html
@@ -4,10 +4,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Belajar Git</title>
+	<title>DAtasiswa</title>
 </head>
 <body>
+	<h4>Datasiswa</h4>
+	<ul>
 		<li>Agin Puspita :12345</li>
-		<li>Auliya Rizki :09876</li>
+	</ul>
+	<coba paragraph
 </body>
 </html>
